# epicnumbers

./: LICENSE  README.md  epicnumbers.py  pyproject.toml
epicnumbers/: main.py
tests/: test_epicnumbers.py
